--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600,800' rel='stylesheet'>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
 
 	<body>
 		
 		<section class="intro">
 			<div class="container">
-				<header>
-					<h1 class="white">Relaxr</h1>
-				</header>
+				<h1 class="white">Relaxr</h1>
 				<h2 class="white center">Get piece of mind with a single tap</h2>
 				<a href="" class="center get">Get it Now</a>
 			</div>
@@ -61,5 +60,10 @@
 				<p class="center">Copyright 2015. Relaxr.</p>
 			</div>
 		</footer>
+	<script>
+		$(".signup").on("click", function() {
+			alert("We're Not Ready For Sign-Ups...Yet.")
+		});
+	</script>	
 	</body>
 </html>
