added ad-unit correctly

--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
 				</div>	
 				
 				<div class="ad-unit">
-					<img src="./images/ad-unit.jpg">
+					<img src="./images/ad-unit.png">
 				</div>
 			</div>
 		</div>
