--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,6 @@
 			</ul>
 		</div>
 	</header>
-
 	<section class="main">
 		<div class="container clearfix">
 			<div class="left articles">
@@ -38,7 +37,6 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					<p class="read-more"></a>Read more ></a></p>
 				</article>
-
 				<article>
 					<h2>I travelled across the globe thanks to Relaxr's Excel automation.</h2>
 					<img src="./images/blog_photo2.jpg" alt="article photo">
@@ -48,12 +46,11 @@
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p class="bold read-more">Read more ></p>			
+					<p class="bold read-more">Read more ></p>	
 				</article>
 			</div>
-
 			<div class="right sidebar">
-				<div class="categories">
+				<div class="right-box">
 					<h3>Categories</h3>
 					<ul>
 						<li><a href="">Success stories</a></li>
@@ -63,26 +60,22 @@
 						<li><a href="">Business tips</a></li>
 					</ul>
 				</div>	
-				
-				<div class="about-relaxr">
+				<div class="right-box">
 					<h3>About Relaxr</h3>
 					<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
 					<p class="bold">Learn more</p>
 				</div>	
-				
 				<div class="ad-unit">
 					<img src="./images/ad-unit.png">
 				</div>
 			</div>
 		</div>
 	</section>
-
 	<footer>
 		<section class="yellow">
 			<div class="container">
 				<a href="" class="signup">Sign Up Now!</a>
 			</div>
-
 		</section>
 		<div class="container">
 			<h1 class="center">Relaxr</h1>
