give cass to drop cap span

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 				<article>
 					<h2>How I implemented Relaxr in 2 weeks and changed my life.</h2>
 					<img src="./images/blog_photo1.jpg" alt="article photo" width="100%">
-					<p><span>L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p><span class="first-character">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
